--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "decimal.js": "^10.5.0",
+    "framer-motion": "^12.10.5",
     "lucide-react": "^0.354.0",
     "next": "14.1.3",
     "react": "^18.2.0",
