--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^12.10.5",
     "lucide-react": "^0.354.0",
     "next": "14.1.3",
+    "pino-pretty": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.6.0",
